<resources>
    <string name="app_name">tkpdseller</string>
    <string name="title_activity_gmstat">Statistik</string>
    <string name="action_settings">Settings</string>
    <string name="set_date">Atur Tanggal</string>
    <string name="title_transaction_success">Transaksi Berhasil</string>
    <string name="no_data">Tidak ada data</string>
    <string name="data_product_title">Data Produk</string>
    <string name="popular_product_title">Produk terlaris</string>
    <string name="number_of_selled">x Terjual</string>
    <string name="yesterday">Kemarin</string>
    <string name="seven_days_ago">7 hari terakhir</string>
    <string name="thirty_days_ago">30 hari terakhir</string>
    <string name="back">Kembali</string>
    <string-array name="month_names_abrev">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mei</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Agu</item>
        <item>Sep</item>
        <item>Okt</item>
        <item>Nov</item>
        <item>Des</item>
    </string-array>
    <string-array name="gender">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>
    <string name="try_again">COBA KEMBALI</string>
    <string name="unknown_exception_description">Tidak ada koneksi.\nSilahkan coba kembali</string>
    <string name="message_exception_description">Terjadi kesalahan koneksi.\nSilahkan coba kembali"</string>
    <string name="default_exception_description">Kesalahan tidak diketahui</string>
    <string name="prefix_footer_market_insight">Kata kunci ini berdasarkan kategori dari </string>
    <string name="last_thirty_days_ago">Data dalam 30 hari terakhir</string>
    <string name="title_top_ads_dashboard">TopAds</string>
    <string name="title_top_ads_product">Produk</string>
    <string name="title_top_ads_store">Toko</string>
    <string name="title_top_ads_promo_group">Grup</string>
    <string name="title_top_ads_add_credit">Tambah Kredit TopAds</string>
    <string name="title_top_ads_new_promo_shop">Pilih Atau Buat Promo</string>
    <string name="title_top_ads_new_promo_product">Tambah Promo Produk</string>
    <string name="title_top_ads_filter">Filter</string>
    <string name="title_date_picker">Atur Tanggal</string>
    <string name="title_top_ads_manage_promo_product">Atur Grup</string>
    <string name="title_top_ads_add_promo_product">Tambah Promo Produk</string>
    <string name="title_top_ads_edit_promo_product">Ubah Promo Produk</string>
    <string name="title_top_ads_keyword_add_detail">Tambah Kata Kunci</string>
    <string name="label_top_ads_impression">Tampil</string>
    <string name="label_top_ads_click">Klik</string>
    <string name="label_top_ads_ctr">CTR</string>
    <string name="label_top_ads_conversion">Konversi</string>
    <string name="label_top_ads_average">Rata - Rata</string>
    <string name="label_top_ads_cost">Terpakai</string>
    <string name="label_top_ads_groups">Grup</string>
    <string name="label_top_ads_items">Produk</string>
    <string name="label_top_ads_keyword">Kata Kunci</string>
    <string name="label_top_ads_choose_credit">Pilih</string>
    <string name="label_top_ads_deposit_desc">Kredit TopAds: %1$s</string>
    <string name="label_top_ads_next">Selanjutnya</string>
    <string name="label_top_ads_save">Simpan</string>
    <string name="menu_top_ads_add_promo_shop">Tambah Promo Toko</string>
    <string name="menu_top_ads_add_promo_group">Tambah Grup Promo</string>
    <string name="menu_top_ads_add_promo_product">Tambah Promo Produk</string>
    <string name="top_ads_statistic_info_default_value">-</string>
    <string name="top_ads_range_date_text">%1$s - %2$s</string>
    <string name="top_ads_delete_product_alert">Apakah anda yakin untuk menghapus produk ini?</string>
    <string name="top_ads_delete_group_alert">Apakah anda yakin untuk menghapus grup ini?</string>
    <string name="action_filter_date">Filter Tanggal</string>
    <string name="label_manage_group">Atur Grup</string>
    <string name="label_edit">Ubah</string>
    <string name="label_delete">Hapus</string>
    <string name="title_product_ad_detail">Detil Promo Produk</string>
    <string name="title_shop_ad_detail">Detil Promo Toko</string>
    <string name="title_group_ad_detail">Detil Promo Grup</string>
    <string name="title_group_ad_edit">Ubah Promo Grup</string>
    <string name="title_delete_promo">Hapus promo</string>
    <string name="title_delete_group">Hapus grup</string>
    <string name="title_edit_shop_ad">Ubah Promo Toko</string>
    <string name="label_top_ads_daily_spend">Anggaran Harian</string>
    <string name="top_ads_bid_format_text">%1$s %2$s</string>
    <string name="top_ads_group_name_format_text">%1$s: %2$s</string>
    <string name="top_ads_spent_separator">/</string>
    <string name="top_ads_empty_shop_title_text">Promo Toko Anda Kosong</string>
    <string name="top_ads_empty_shop_content_text">Promosikan toko Anda untuk menambah banyak pengunjung dan mendapatkan banyak favorit.</string>
    <string name="top_ads_empty_promo_not_found_title_empty_text">Hasil tidak ditemukan</string>
    <string name="top_ads_empty_promo_not_found_content_empty_text">Silahkan coba lagi atau ganti kata kunci</string>
    <string name="top_ads_empty_group_title_promo_text">Grup Promo Anda Kosong</string>
    <string name="top_ads_empty_product_title_promo_text">Promo Produk Anda Kosong</string>
    <string name="top_ads_empty_group_promo_content_text">Gunakan Grup Promo dan nikmati kemudahan mengatur Promo Anda dalam sekali pengaturan.</string>
    <string name="top_ads_empty_product_promo_content_text">Promosikan produk Anda agar lebih mudah ditemukan pembeli untuk mendapatkan lebih banyak pengunjung dan meningkatkan penjualan.</string>
    <string name="top_ads_empty_group_promo_content_not_empty_text">Produk yang telah anda promosikan ada di dalam items</string>
    <string name="top_ads_empty_group_promo_content_item_no_text">Lihat %1$s Promo Produk</string>
    <string name="label_top_ads_add_product">Tambah Produk</string>
    <string name="label_top_ads_total_selected_product">%02d / 50 Terpilih</string>
    <string name="label_top_ads_total_selected_product_zero">%1$d / 50 Terpilih</string>
    <string name="label_top_ads_max_price_hint">Biaya Maks</string>
    <string name="label_top_ads_max_price_description">Sesuaikan biaya dengan anggaran promo Anda. Rekomendasi biaya: Rp 50 sampai Rp 200 per klik.</string>
    <string name="label_top_ads_limit_price_description">Batas anggaran dihitung dari akumulasi biaya promo jika dalam satu grup promo.</string>
    <string name="label_top_ads_icon">Icon TopAds</string>
    <string name="label_top_ads_budget">Anggaran</string>
    <string name="label_top_ads_budget_lifetime">Anggaran tidak dibatasi</string>
    <string name="label_top_ads_budget_per_day">Per Hari</string>
    <string name="label_top_ads_budget_cost_per_day">Biaya per hari</string>
    <string name="label_top_ads_show_time">Waktu Tampil</string>
    <string name="label_top_ads_show_time_automatic">Otomatis</string>
    <string name="label_top_ads_show_time_configured">Atur tanggal mulai dan berhenti</string>
    <string name="label_top_ads_show_time_start">Mulai</string>
    <string name="label_top_ads_show_time_end">Selesai</string>
    <string name="label_top_ads_promoted">Promoted</string>
    <string name="label_top_ads_all_status">Semua Status</string>
    <string name="label_top_ads_active">Aktif</string>
    <string name="label_top_ads_not_sent">Tidak Terkirim</string>
    <string name="label_top_ads_not_active">Tidak Aktif</string>
    <string name="label_top_ads_all_product">Semua Produk</string>
    <string name="label_top_ads_inside_group">Di Dalam Grup</string>
    <string name="label_top_ads_outside_group">Di Luar Grup</string>
    <string name="label_top_ads_not_promoted_yet">Belum di Promo</string>
    <string name="label_top_ads_name">Name</string>
    <string name="label_top_ads_status">Status</string>
    <string name="label_top_ads_etalase">Etalase</string>
    <string name="label_top_ads_max_bid">Biaya Maks</string>
    <string name="label_top_ads_avg_cost">Rata-rata</string>
    <string name="label_top_ads_start">Mulai</string>
    <string name="label_top_ads_end">Selesai</string>
    <string name="label_top_ads_daily_budget">Anggaran Harian</string>
    <string name="label_top_ads_sent">Terpakai</string>
    <string name="label_top_ads_favorite">Terjual</string>
    <string name="label_topads_price_and_schedule">Biaya &amp; Jadwal</string>
    <string name="topads_title_review_statistic">Ringkasan Statistik</string>
    <string name="gmsubscribe_feature_gold_badge">Gold Badge</string>
    <string name="gmsubscribe_feature_gold_badge_desc">Tampilan produk dan toko akan terlihat beda serta lebih terpercaya</string>
    <string name="gmsubscribe_feature_topads">TopAds</string>
    <string name="gmsubscribe_feature_topads_desc">Promosi produk dan toko jadi lebih efektif dan efisien</string>
    <string name="gmsubscribe_feature_statistic">Statistik Toko</string>
    <string name="gmsubscribe_feature_statistic_desc">Pantau perkembangan toko hingga detail penjualan jadi lebih mudah</string>
    <string name="gmsubscribe_feature_ticket">Gold Ticket</string>
    <string name="gmsubscribe_feature_ticket_desc">Tiket kendala yang Anda kirim jadi prioritas Tim Customer Care kami</string>
    <string name="gmsubscribe_feature_cover">Sampul Toko</string>
    <string name="gmsubscribe_feature_cover_desc">Jadikan halaman toko Anda lebih menarik dengan upload kreasi sampul foto Anda sendiri</string>
    <string name="gmsubscribe_subfeature_title">Fitur-fitur Gold Merchant ini juga dapat\nmembantu memaksimalkan penjualanmu</string>
    <string name="gmsubscribe_subfeature_etalase">Tambahan\n150 Etalase</string>
    <string name="gmsubscribe_feature_admin">Gratis\n1 Admin Toko</string>
    <string name="gmsubscribe_feature_cashback">Cashback TopPoints</string>
    <string name="gmsubscribe_feature_video">Tambah\nVideo Produk</string>
    <string name="gmsubscribe_feature_pantaupasar">Pantau\nPermintaan Pasar</string>
    <string name="gmsubscribe_feature_kurs">Atur Harga\nKurs Dollar</string>
    <string name="label_top_ads_group_name">Nama Grup</string>
    <string name="label_top_ads_choose_group">Pilih Grup</string>
    <string name="label_top_ads_create_promo_new_group">Grup Baru</string>
    <string name="label_top_ads_create_promo_from_exist_group">Grup yang Ada</string>
    <string name="label_top_ads_create_promo_not_in_group">Tanpa Grup</string>
    <string name="top_ads_detail_edit_default_lifetime_currency_value">5000</string>
    <string name="product_label_product_info">Info Produk</string>
    <string name="product_label_name">Nama Produk</string>
    <string name="product_label_catalog">Katalog</string>
    <string name="product_label_category">Kategori</string>
    <string name="product_label_choose">Pilih</string>
    <string name="product_label_product_recommendation">Rekomendasi Kategori</string>
    <string name="product_label_product_about">Tentang Produk</string>
    <string name="product_label_product_price">Harga Produk</string>
    <string name="product_label_wholesale_price">Harga Grosir</string>
    <string name="product_label_product_weight">Berat Produk</string>
    <string name="product_label_minimum_buy">Minimal Pembelian</string>
    <string name="product_label_manage_stock">Pengaturan Stok</string>
    <string name="product_label_stock_total">Jumlah Stok</string>
    <string name="product_label_status">Status</string>
    <string name="product_label_condition">Kondisi</string>
    <string name="product_label_insurance">Asuransi</string>
    <string name="product_label_free_returns">Free Returns</string>
    <string name="product_default_counter_minimum_order_text">1</string>
</resources>