<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="@dimen/topads_detail_padding_item"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/max_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_max_bid"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/avg_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_avg_cost"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_start"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_end"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/daily_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_daily_budget"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_sent"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/impr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_impression"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_click"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/ctr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_top_ads_ctr"/>

    <include layout="@layout/include_separator_horizontal"/>

    <com.tokopedia.seller.topads.view.widget.TopAdsLabelView
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/topads_detail_padding_item"
        app:title="@string/label_top_ads_favorite"/>

</merge>