<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LabelLayout"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Small.BlackSecondary"
            android:text="@string/product_label_product_about" />

    </LinearLayout>

    <LinearLayout style="@style/LabelLayout">

        <com.tokopedia.design.text.SpinnerCounterInputView
            android:id="@+id/spinner_counter_input_view_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:spinner_decimal_entries="@array/product_currency_entries"
            app:spinner_decimal_hint="@string/product_label_product_price"
            app:spinner_decimal_max_length="@integer/product_max_counter_length"
            app:spinner_decimal_show_counter_button="false"
            app:spinner_decimal_values="@array/product_currency_values" />

        <ImageButton
            android:id="@+id/image_button_edit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit_green"
            android:visibility="gone" />
    </LinearLayout>


    <com.tokopedia.expandable.ExpandableOptionSwitch
        android:id="@+id/expandable_option_switch_wholesale"
        style="@style/LabelLayout"
        android:visibility="gone"
        app:eo_checked="false"
        app:eo_theme="@style/ExpandableStyle"
        app:eo_title="@string/product_label_wholesale_price">

        <include layout="@layout/partial_product_wholesale" />
    </com.tokopedia.expandable.ExpandableOptionSwitch>

    <com.tokopedia.design.text.SpinnerCounterInputView
        android:id="@+id/spinner_counter_input_view_weight"
        style="@style/LabelLayout"
        android:layout_marginTop="@dimen/margin_med"
        app:spinner_decimal_entries="@array/product_weight_entries"
        app:spinner_decimal_hint="@string/product_label_product_weight"
        app:spinner_decimal_show_counter_button="false"
        app:spinner_decimal_values="@array/product_weight_values" />

    <com.tokopedia.design.text.CounterInputView
        android:id="@+id/counter_input_view_minimum_order"
        style="@style/LabelLayout"
        android:layout_marginTop="@dimen/margin_med"
        app:counter_hint="@string/product_label_minimum_buy"
        app:counter_min="@integer/product_default_counter_minimum_order_text"
        app:counter_text="@string/product_default_counter_minimum_order_text" />

    <com.tokopedia.design.text.SpinnerTextView
        android:id="@+id/spinner_text_view_stock_status"
        style="@style/LabelLayout"
        app:spinner_entries="@array/product_stock_status_entries"
        app:spinner_hint="@string/product_label_status"
        app:spinner_selection_index="1"
        app:spinner_values="@array/product_stock_status_values" />

    <com.tokopedia.expandable.ExpandableOptionSwitch
        android:id="@+id/expandable_option_switch_stock_total"
        style="@style/LabelLayout"
        android:visibility="gone"
        app:eo_checked="false"
        app:eo_theme="@style/ExpandableStyle"
        app:eo_title="@string/product_label_manage_stock">

        <com.tokopedia.design.text.CounterInputView
            android:id="@+id/counter_input_view_stock_total"
            style="@style/LabelLayout.InnerExpandable"
            app:counter_hint="@string/product_label_stock_total" />
    </com.tokopedia.expandable.ExpandableOptionSwitch>

    <com.tokopedia.seller.common.widget.LabelView
        android:id="@+id/label_view_etalase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        android:focusable="true"
        app:content="@string/product_label_choose"
        app:content_color="@color/tkpd_main_green"
        app:title="@string/product_label_etalase" />

    <com.tokopedia.design.text.SpinnerTextView
        android:id="@+id/spinner_text_view_condition"
        style="@style/LabelLayout"
        android:layout_marginTop="@dimen/margin_med"
        app:spinner_entries="@array/product_condition_entries"
        app:spinner_hint="@string/product_label_condition"
        app:spinner_values="@array/product_condition_values" />

    <com.tokopedia.design.text.SpinnerTextView
        android:id="@+id/spinner_text_view_insurance"
        style="@style/LabelLayout"
        app:spinner_entries="@array/product_insurance_entries"
        app:spinner_hint="@string/product_label_insurance"
        app:spinner_values="@array/product_insurance_values" />

    <com.tokopedia.design.text.SpinnerTextView
        android:id="@+id/spinner_text_view_free_returns"
        style="@style/LabelLayout"
        android:visibility="gone"
        app:spinner_entries="@array/product_free_returns_entries"
        app:spinner_hint="@string/product_label_free_returns"
        app:spinner_values="@array/product_free_returns_values" />
</LinearLayout>