<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        style="@style/TextView.TopAds.Body.Gray"
        android:text="@string/label_top_ads_budget"/>

    <RadioGroup
        android:id="@+id/radio_group_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TopAdsCustomRadioGroup">

        <RadioButton
            android:id="@+id/radio_button_budget_life_time"
            style="@style/TopAdsRadioButton"
            android:checked="true"
            android:text="@string/label_top_ads_budget_lifetime"/>

        <RadioButton
            android:id="@+id/radio_button_budget_per_day"
            style="@style/TopAdsRadioButton"
            android:text="@string/label_top_ads_budget_per_day"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/container_budget_per_day"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_budget_per_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout.VerySmall"
                style="@style/TextInputLayout">

                <com.tokopedia.seller.topads.view.widget.PrefixEditText
                    android:id="@+id/edit_text_budget_per_day"
                    style="@style/EditText.Currency"
                    android:layout_width="match_parent"
                    app:prefixTextColor="@color/tkpd_main_green"
                    app:prefix="@string/title_currency_rp_space"
                    android:hint="@string/label_top_ads_budget_cost_per_day"
                    android:text="@string/top_ads_detail_edit_default_lifetime_currency_value"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/info_limit_price"
                style="@style/TextView.TopAds.Body.Gray"
                android:maxLines="3"
                android:text="@string/label_top_ads_limit_price_description"/>
        </LinearLayout>
    </RadioGroup>
</LinearLayout>