<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/top_ads_margin_layout">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_new_group"
            style="@style/RadioGroup"
            android:text="@string/label_top_ads_create_promo_new_group"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_new_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_new_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_top_ads_group_name"/>

        </android.support.design.widget.TextInputLayout>

        <RadioButton
            android:id="@+id/radio_button_exist_group"
            style="@style/RadioGroup"
            android:text="@string/label_top_ads_create_promo_from_exist_group"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_exist_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_exist_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_top_ads_choose_group"/>

        </android.support.design.widget.TextInputLayout>

        <RadioButton
            android:id="@+id/radio_button_no_group"
            style="@style/RadioGroup"
            android:text="@string/label_top_ads_create_promo_not_in_group"/>
    </RadioGroup>

</LinearLayout>