<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LabelLayoutWithoutBorder"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.TopAds.Body.Gray"
            android:text="@string/product_label_product_info" />

    </LinearLayout>

    <FrameLayout style="@style/LabelLayoutWithoutBorder">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/TextInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/product_max_character_name">

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:hint="@string/product_label_name" />

        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_margin_cards"
        android:divider="@color/grey_300"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LabelLayoutWithoutBorder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_shop_title"
                style="@style/TextView.TopAds.Body.Gray"
                android:text="@string/product_label_product_recommendation" />

        </LinearLayout>

        <com.tokopedia.seller.lib.widget.LabelView
            android:id="@+id/label_view_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:content="@string/product_label_choose"
            app:content_color="@color/tkpd_main_green"
            app:label_show_arrow="true"
            app:title="@string/product_label_category" />
    </LinearLayout>

    <com.tokopedia.seller.lib.widget.LabelView
        android:id="@+id/label_view_catalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_margin_cards"
        app:content="@string/product_label_choose"
        app:content_color="@color/tkpd_main_green"
        app:label_show_arrow="true"
        app:title="@string/product_label_catalog" />

</LinearLayout>